feat: refactor to artwork page component

--- a/src/app/features/artwork/pages/artwork-page/artwork-page.component.html
+++ b/src/app/features/artwork/pages/artwork-page/artwork-page.component.html
@@ -21,9 +21,6 @@
         <nx-dropdown
           *ngIf="artworks$ | async as artworks"
           [(ngModel)]="sortBy"
-          (selectionChange)="
-            filterAndSort(artworks, selectedFilters, $event.value)
-          "
           [nxValueFormatter]="toLabel"
         >
           <nx-dropdown-item
@@ -45,41 +42,7 @@
     </div>
 
     <div class="w-full" *ngSwitchCase="[Status.Success]">
-      <div class="grid grid-cols-4 gap-8 w-full">
-        <nx-card
-          *ngFor="
-            let artwork of filterAndSort(
-              (artworks$ | async) || [],
-              selectedFilters,
-              sortBy
-            )
-          "
-        >
-          <div class="flex justify-center items-center max-h-96">
-            <img
-              [src]="artwork.imgUrl"
-              [alt]="artwork.title"
-              (error)="setImagePlaceholder(artwork)"
-              class="w-auto max-h-56"
-            />
-          </div>
-
-          <nx-card-header>
-            <h3 nxHeadline="subsection-small" class="nx-margin-bottom-2m">
-              {{ artwork.title }}
-            </h3>
-          </nx-card-header>
-          <p nxHeadline="subsection-xsmall" class="nx-margin-bottom-m">
-            {{ artwork.artists }}
-          </p>
-          <p nxCopytext="normal">
-            {{ artwork.originAndYear }}
-          </p>
-          <p nxCopytext="normal">
-            {{ artwork.materials }}
-          </p>
-        </nx-card>
-      </div>
+        <app-artwork-list [artworks]="(artworks$ | async) || []" [selectedFilters]="selectedFilters" [sortBy]="sortBy" />
     </div>
   </div>
 
